--- a/script_aulas/aula1.ipynb
+++ b/script_aulas/aula1.ipynb
@@ -196,14 +196,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "b12f8224",
       "metadata": {
         "trusted": true
       },
       "outputs": [],
       "source": [
-        "# definindo variável float (com casas decimais) chamada num2\n"
+        "# definindo variável float (com casas decimais) chamada num3\n"
       ]
     },
     {
@@ -427,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "8e5b2851",
       "metadata": {
         "trusted": true
@@ -435,9 +435,14 @@
       "outputs": [],
       "source": [
         "# obter valores: input()\n",
-        "# atribuir para uma variável chamada nome_completo\n",
-        "# no lablite, utilize await input()\n"
+        "# atribuir para uma variável chamada nome_completo\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "34749c11",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "code",
@@ -650,14 +655,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "89983690",
       "metadata": {
         "trusted": true
       },
       "outputs": [],
       "source": [
-        "# definir uma lista com vários tipos de dados\n"
+        "# definir uma variável do tipo NoneType\n"
       ]
     },
     {
